logs/deferred.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/deferred'...
Compiling './lib/python3.5/site-packages/deferred/_defer.py'...
***   File "./lib/python3.5/site-packages/deferred/_defer.py", line 728
    except _DefGen_Return, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deferred/_failure.py'...
***   File "./lib/python3.5/site-packages/deferred/_failure.py", line 43
    raise ValueError, "Detail must be default, brief, or verbose. (not %r)" % (detail,)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deferred/_util.py'...
***   File "./lib/python3.5/site-packages/deferred/_util.py", line 30
    _HUGEINT = (sys.maxint + 1L) * 2L
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deferred/tests'...
Compiling './lib/python3.5/site-packages/deferred/tests/test_defer.py'...
***   File "./lib/python3.5/site-packages/deferred/tests/test_defer.py", line 325
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deferred/tests/test_defgen.py'...
***   File "./lib/python3.5/site-packages/deferred/tests/test_defgen.py", line 113
    except ZeroDivisionError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deferred-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
